{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 18,
  "lineage": "f11e7529-2347-955a-f2d5-2ea48a8c1467",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-059f903aedae39a6e",
            "arn": "arn:aws:ec2:ap-south-1:300553112337:elastic-ip/eipalloc-059f903aedae39a6e",
            "domain": "vpc",
            "id": "eipalloc-059f903aedae39a6e",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-109-255-9.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.255.9",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300553112337:internet-gateway/igw-0d8ffda7aeb00c371",
            "id": "igw-0d8ffda7aeb00c371",
            "owner_id": "300553112337",
            "region": "ap-south-1",
            "tags": {
              "Name": "Gokulnath_Dharmalingam_IGW"
            },
            "tags_all": {
              "Name": "Gokulnath_Dharmalingam_IGW"
            },
            "vpc_id": "vpc-04243bc987582437d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.gokul_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-059f903aedae39a6e",
            "association_id": "eipassoc-07ca370ec490f78f4",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0e82a25e895dc7e10",
            "network_interface_id": "eni-0fdb97de1b3cb3504",
            "private_ip": "10.0.1.34",
            "public_ip": "3.109.255.9",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b3b0f4e9371b2716",
            "tags": {
              "Name": "Gokulnath_Dharmalingam_NATGW"
            },
            "tags_all": {
              "Name": "Gokulnath_Dharmalingam_NATGW"
            },
            "vpc_id": "vpc-04243bc987582437d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public1",
            "aws_vpc.gokul_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300553112337:route-table/rtb-0fd505015ec54c102",
            "id": "rtb-0fd505015ec54c102",
            "owner_id": "300553112337",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e82a25e895dc7e10",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Gokulnath_Dharmalingam_PrivateRT"
            },
            "tags_all": {
              "Name": "Gokulnath_Dharmalingam_PrivateRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-04243bc987582437d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "300553112337",
            "id": "rtb-0fd505015ec54c102",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.natgw",
            "aws_subnet.public1",
            "aws_vpc.gokul_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300553112337:route-table/rtb-0f484b19aa67a9a06",
            "id": "rtb-0f484b19aa67a9a06",
            "owner_id": "300553112337",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d8ffda7aeb00c371",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Gokulnath_Dharmalingam_PublicRT"
            },
            "tags_all": {
              "Name": "Gokulnath_Dharmalingam_PublicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-04243bc987582437d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "300553112337",
            "id": "rtb-0f484b19aa67a9a06",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.gokul_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094a68e507b1049f8",
            "region": "ap-south-1",
            "route_table_id": "rtb-0fd505015ec54c102",
            "subnet_id": "subnet-0641e35d4a85d25b4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private_rt",
            "aws_subnet.private1",
            "aws_subnet.public1",
            "aws_vpc.gokul_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09536249ebaa60c01",
            "region": "ap-south-1",
            "route_table_id": "rtb-0fd505015ec54c102",
            "subnet_id": "subnet-0c1f762a746f9129e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private_rt",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_vpc.gokul_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5841504dacc3615",
            "region": "ap-south-1",
            "route_table_id": "rtb-0f484b19aa67a9a06",
            "subnet_id": "subnet-0b3b0f4e9371b2716"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public1",
            "aws_vpc.gokul_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092c94fce024e7b77",
            "region": "ap-south-1",
            "route_table_id": "rtb-0f484b19aa67a9a06",
            "subnet_id": "subnet-077989cc973827519"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public2",
            "aws_vpc.gokul_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300553112337:subnet/subnet-0641e35d4a85d25b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0641e35d4a85d25b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "300553112337",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Gokulnath_Dharmalingam_Private1"
            },
            "tags_all": {
              "Name": "Gokulnath_Dharmalingam_Private1"
            },
            "vpc_id": "vpc-04243bc987582437d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "300553112337",
            "id": "subnet-0641e35d4a85d25b4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.gokul_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300553112337:subnet/subnet-0c1f762a746f9129e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1f762a746f9129e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "300553112337",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Gokulnath_Dharmalingam_Private2"
            },
            "tags_all": {
              "Name": "Gokulnath_Dharmalingam_Private2"
            },
            "vpc_id": "vpc-04243bc987582437d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "300553112337",
            "id": "subnet-0c1f762a746f9129e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.gokul_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300553112337:subnet/subnet-0b3b0f4e9371b2716",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3b0f4e9371b2716",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "300553112337",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Gokulnath_Dharmalingam_Public1"
            },
            "tags_all": {
              "Name": "Gokulnath_Dharmalingam_Public1"
            },
            "vpc_id": "vpc-04243bc987582437d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "300553112337",
            "id": "subnet-0b3b0f4e9371b2716",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.gokul_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300553112337:subnet/subnet-077989cc973827519",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077989cc973827519",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "300553112337",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Gokulnath_Dharmalingam_Public2"
            },
            "tags_all": {
              "Name": "Gokulnath_Dharmalingam_Public2"
            },
            "vpc_id": "vpc-04243bc987582437d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "300553112337",
            "id": "subnet-077989cc973827519",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.gokul_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gokul_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:300553112337:vpc/vpc-04243bc987582437d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00ba7ef6f09f09423",
            "default_route_table_id": "rtb-08b0c3ca4ed04840e",
            "default_security_group_id": "sg-09d292c35605f2133",
            "dhcp_options_id": "dopt-0a9c38e94efed7088",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04243bc987582437d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08b0c3ca4ed04840e",
            "owner_id": "300553112337",
            "region": "ap-south-1",
            "tags": {
              "Name": "Gokulnath_Dharmalingam_VPC"
            },
            "tags_all": {
              "Name": "Gokulnath_Dharmalingam_VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "300553112337",
            "id": "vpc-04243bc987582437d",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}